objects/BMCServiceDesk__BMC_Monitor__c.object
<CustomObject>
    <description>BMC_Monitor. CMDB Class that stores information about display screens attached to computer systems. This class corresponds to the DMTF CIM_DesktopMonitor class.</description>
    <fields>
        <fullName>BMCServiceDesk__Bandwidth__c</fullName>
        <label>Bandwidth</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Display_Type__c</fullName>
        <label>Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multiscan Color</fullName>
                </value>
                <value>
                    <fullName>Multiscan Monochrome</fullName>
                </value>
                <value>
                    <fullName>Fixed Frequency Color</fullName>
                </value>
                <value>
                    <fullName>Fixed Frequency Monochrome</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Pixels_Per_X_Logical_Inch__c</fullName>
        <label>Pixels Per X Logical Inch</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Pixels_Per_Y_Logical_Inch__c</fullName>
        <label>Pixels Per Y Logical Inch</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Screen_Height__c</fullName>
        <label>Screen Height</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Screen_Width__c</fullName>
        <label>Screen Width</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Monitor</label>
    <nameField>
        <label>Monitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>